fix: :fire: usuń dodane style do komponentów

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,15 +22,7 @@
         >UI Components</a
       >
     </p>
-    <ion-accordion-group
-      style="
-        position: absolute;
-        top: 12px;
-        left: 12px;
-        width: 100%;
-        max-width: 384px;
-      "
-    >
+    <ion-accordion-group>
       <ion-accordion value="first">
         <ion-item slot="header" color="light">
           <ion-label>First Accordion</ion-label>
