feat(ui): :lipstick: add side menu
Add side menu on the right.

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,13 @@
-<ion-header [translucent]="true">
+<ion-header role="menubar">
   <ion-toolbar>
-    <ion-title> FlightDrone </ion-title>
+    <ion-title slot="start"> FlightDrone </ion-title>
+    <ion-buttons slot="end">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content id="main-content">
   <ion-accordion-group
     expand="inset"
     style="
@@ -15,24 +18,33 @@
       max-width: 384px;
     "
   >
-    <ion-accordion value="first">
+    <ion-accordion role="banner" value="first">
       <ion-item slot="header" color="light">
-        <ion-label>First Accordion</ion-label>
+        <ion-label>Notifications</ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">First Content</div>
     </ion-accordion>
     <ion-accordion value="second">
       <ion-item slot="header" color="light">
-        <ion-label>Second Accordion</ion-label>
+        <ion-label>Most tracked drones</ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">Second Content</div>
     </ion-accordion>
     <ion-accordion value="third">
       <ion-item slot="header" color="light">
-        <ion-label>Third Accordion</ion-label>
+        <ion-label>Favourite locations</ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">Third Content</div>
     </ion-accordion>
   </ion-accordion-group>
   <app-map />
 </ion-content>
+
+<ion-menu role="menu" contentId="main-content" side="end">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu Content</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">This is the menu content.</ion-content>
+</ion-menu>
