fix(ui): :lipstick: fix accordion width on xs screens

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,7 @@
       position: absolute;
       top: 12px;
       left: 12px;
-      width: 100%;
+      right: 12px;
       max-width: 384px;
     "
   >
