fix(map): :bug: remove z-index from map component

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,6 +16,7 @@
       left: 12px;
       right: 12px;
       max-width: 384px;
+      z-index: 1;
     "
   >
     <ion-accordion role="banner" value="first">
