--- a/src/app/map/feature/map.component.scss
+++ b/src/app/map/feature/map.component.scss
@@ -1,5 +1,7 @@
 capacitor-google-map {
-  display: inline-block;
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
