--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -27,3 +27,15 @@ ion-menu::part(container) {
   border-radius: 20px 0 0 20px;
   box-shadow: 4px 0px 16px rgba(255, 0, 255, 0.18);
 }
+
+.menubar {
+  --background: transparent;
+  --ion-color-base: transparent !important;
+}
+
+.searchbox {
+  text-align: start;
+  max-width: 384px;
+  width: 100%;
+  --border-radius: 20px;
+}
