--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-toolbar class="menubar" role="menubar">
   <ion-title slot="start"> FlightDrone </ion-title>
-  <ion-searchbar color="dark" class="searchbox" role="searchbox" slot="end" />
+  <ion-searchbar class="searchbox" role="searchbox" slot="end" placeholder="Wyszukaj..." />
   <ion-buttons slot="end">
     <ion-menu-button></ion-menu-button>
   </ion-buttons>
