style(ui): :lipstick: add footer to side menu

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -43,8 +43,13 @@
 <ion-menu role="menu" contentId="main-content" side="end">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu Content</ion-title>
+      <ion-title>Menu Title</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">This is the menu content.</ion-content>
+  <ion-footer>
+    <ion-toolbar>
+      <ion-title>Menu Footer</ion-title>
+    </ion-toolbar>
+  </ion-footer>
 </ion-menu>
