--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -40,16 +40,20 @@
   <app-map />
 </ion-content>
 
-<ion-menu role="menu" contentId="main-content" side="end">
+<ion-menu class="menu" role="menu" contentId="main-content" side="end">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu Title</ion-title>
+      <ion-title class="menu-title">Jan Kowalski</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content class="ion-padding">This is the menu content.</ion-content>
+  
+  <!-- <ion-content class="ion-padding">Numer operatora</ion-content>
+  <ion-content class="ion-padding">Numer pilota</ion-content>
+  <ion-content class="ion-padding"> </ion-content>
+  <ion-content class="ion-padding">Ustawienia</ion-content> -->
   <ion-footer>
     <ion-toolbar>
-      <ion-title>Menu Footer</ion-title>
+      <ion-title>Wyloguj</ion-title>
     </ion-toolbar>
   </ion-footer>
 </ion-menu>
