--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,12 +25,22 @@
 
 ion-menu::part(container) {
   border-radius: 20px 0 0 20px;
-  box-shadow: 4px 0px 16px rgba(255, 0, 255, 0.18);
+  box-shadow: 1px 0px 25px rgb(0, 0, 0);
+  opacity: .75;
+  //--ion-background-color:rgba(255, 255, 255, 0.597);
 }
 
 .menubar {
   --background: transparent;
   --ion-color-base: transparent !important;
+}
+
+.menu {
+  backdrop-filter: blur(2px);
+}
+
+.menu-title{
+  text-align: center;
 }
 
 .searchbox {
