color searchbox light

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-toolbar class="menubar" role="menubar">
   <ion-title slot="start"> FlightDrone </ion-title>
   <ion-searchbar
-    color="dark"
+    color="light"
     class="searchbox"
     role="searchbox"
     slot="end"
