--- a/src/app/shared/feature/check-in/check-in.component.scss
+++ b/src/app/shared/feature/check-in/check-in.component.scss
@@ -1,4 +1,10 @@
-ion-modal {
-  --border-radius: 1rem;
-  --min-height: fit-content;
+ion-modal#example-modal {
+  --width: fit-content;
+  --min-width: 250px;
+  --height: fit-content;
+  --box-shadow: 0 28px 48px rgba(0, 0, 0, 0.4);
+}
+
+ion-modal#example-modal h1 {
+  margin: 0;
 }
