fix(ui): :recycle: umieść jednostki w nawiasach

--- a/src/app/shared/feature/check-in/check-in.component.html
+++ b/src/app/shared/feature/check-in/check-in.component.html
@@ -19,7 +19,8 @@
     <div class="wrapper">
       <ion-list lines="none">
         <ion-item>
-          <ion-input label="Promień lotu" placeholder="650" type="number" /> m
+          <ion-input label="Promień lotu" placeholder="650" type="number" />
+          [m]
         </ion-item>
         <ion-item>
           <ion-input
@@ -27,11 +28,11 @@
             placeholder="50"
             type="number"
           />
-          m
+          [m]
         </ion-item>
         <ion-item>
           <ion-input label="Czas trwania lotu" type="number" placeholder="40" />
-          min
+          [min]
         </ion-item>
         <ion-item>
           <ion-select
