--- a/src/global.scss
+++ b/src/global.scss
@@ -25,7 +25,9 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
-ion-button
-{
-    --border-radius: 12px;
+ion-button {
+  --border-radius: 12px;
+}
+ion-skeleton-text {
+  --border-radius: 12px;
 }
