--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,17 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
-ion-button {
-  --border-radius: 8px;
+ion-button
+{
+  --border-radius: 12px;
+}
+
+ion-card
+{
+  --border-radius: 12px;
+}
+
+ion-skeleton-text
+{
+  --border-radius: 12px;
 }
