--- a/src/global.scss
+++ b/src/global.scss
@@ -25,33 +25,31 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
-ion-button
-{
+ion-button {
   --border-radius: 12px;
 }
 
-ion-card
-{
+ion-card {
   --border-radius: 12px;
 }
 
-ion-skeleton-text
-{
+ion-skeleton-text {
   --border-radius: 12px;
 }
 
-body
-{
+body {
   background: url("/assets/png/background.png") no-repeat center center;
   background-size: cover;
 }
 
-ion-content
-{
+ion-content {
   --background: none;
 }
 
-ion-modal
-{
+ion-modal {
   --border-radius: 12px;
+}
+
+ion-modal#sheet-modal {
+  --border-radius: 12px 12px 0 0;
 }
