--- a/src/global.scss
+++ b/src/global.scss
@@ -79,8 +79,13 @@ ion-toolbar .menubar{
 
 ion-modal#user-settings-modal{
   backdrop-filter: blur(10px) !important;
-  --box-shadow: 0 4px 16px rgb(27, 27, 27) !important;
+  box-shadow: 0 4px 16px rgb(27, 27, 27) !important;
 } 
+
+ion-card{
+  backdrop-filter: blur(10px) !important;
+  box-shadow: 0 4px 16px rgb(27, 27, 27) !important; 
+}
 
 
 
