--- a/src/global.scss
+++ b/src/global.scss
@@ -78,6 +78,14 @@ ion-modal{
   --border-radius: 8px;
 }
 
+ion-modal .current-flight{
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.alert-wrapper{
+  box-shadow: 0 4px 16px rgb(27, 27, 27) !important; 
+}
+
 
 
 
