--- a/src/global.scss
+++ b/src/global.scss
@@ -85,6 +85,7 @@ ion-modal{
 
 .alert-wrapper.sc-ion-alert-md{
   box-shadow: 0 4px 16px rgb(27, 27, 27) !important; 
+  background-color: rgba(0, 0, 0, 0.3) !important;
 }
 
 
