--- a/src/global.scss
+++ b/src/global.scss
@@ -81,11 +81,13 @@ ion-modal{
 .sc-ion-alert-md-h{
   backdrop-filter: blur(10px) !important;
   background-color: rgba(0, 0, 0, 0.3) !important;
+  //background: var(--background) !important;
 }
 
 .alert-wrapper.sc-ion-alert-md{
   box-shadow: 0 4px 16px rgb(27, 27, 27) !important; 
   background-color: rgba(0, 0, 0, 0.3) !important;
+  background: var(--background) !important;
 }
 
 
